syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "github.com/avborup/ITU-DISYS2021-MiniProject3/service";

package service;

service service {
    rpc MakeBid(Bid) returns (Result) {};
    rpc GetResult(google.protobuf.Empty) returns (Result) {};
}

message Bid {
    string uuid = 1;
    int32 amount = 2;
}

message Result {
    string madeBy = 1;
    int32 amount = 2;
    Status status = 3;
}

enum Status {
    OK = 0;
    TOO_LOW = 1;
    AUCTION_OVER = 2;
}
